@@ -15,6 +15,7 @@ Se agregó una función de menú para sincronizar la instantánea local con la r
 Comandos ZRCP agregados: open-menu, print-error
 Agregada Configuración para forzar el modo CHR$ 128 en ZX81
 Agregada función de búsqueda para buscar entradas del menú.
+Agregado tipo de archivos .zmenu para lanzar archivos
 
 * Mejoras:
 
